--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>texto</h1>
 
+   <div id="entrada-nome" class="entrada-nomes">
+      <imput type="text" id="jogador1" aria-placeholder="nome do jogador 1">
+      <imput type="text" id="jogador2" aria-placeholder="nome do jogador 2">
+      <button onclick="iniciarJogo()">Inicior jogo</button>
+   </div>   
+
     <script src="script.js"></script>
 </body>
 </html>
