--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>texto</h1>
 
    <div id="entrada-nome" class="entrada-nomes">
-      <imput type="text" id="jogador1" aria-placeholder="nome do jogador 1">
-      <imput type="text" id="jogador2" aria-placeholder="nome do jogador 2">
+      <imput type="text" id="jogador1" placeholder="nome do jogador 1">
+      <imput type="text" id="jogador2" placeholder="nome do jogador 2">
       <button onclick="iniciarJogo()">Inicior jogo</button>
    </div>   
 
