--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
    <div id="entrada-nome" class="entrada-nomes">
-      <imput type="text" id="jogador1" placeholder="nome do jogador 1">
-      <imput type="text" id="jogador2" placeholder="nome do jogador 2">
+      <input type="text" id="jogador1" placeholder="nome do jogador 1">
+      <input type="text" id="jogador2" placeholder="nome do jogador 2">
       <button onclick="iniciarJogo()">Inicior jogo</button>
    </div>   
 
